--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,20 @@
 .container {
   display: flex;
-  padding: 25px;
+  margin: auto;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url("/src/assets/clouds-4215608_960_720.webp");
-  background-repeat: no-repeat;
-  background-size: cover;
+  border: 3px solid lightgray;
+  border-radius: 6px;
   width: 100%;
   height: 100vh;
+  font-size: larger;
+
 }
 
 .input {
   padding: 15px;
   width: 80%;
-  margin: auto;
   border: 3px solid lightgray;
   border-radius: 6px;
   font-size: 20px;
@@ -25,26 +25,21 @@
 }
 
 .weather-data {
-  margin-top: 100px;
-  display: flex;
+ 
+
   flex-direction: column;
   align-items: center;
 }
-
 .city {
-  font-size: 30px;
-  font-weight: 200;
+  font-size: 40px;
+ 
 }
-
 .temp {
   font-size: 60px;
   padding: 10px;
   border: 3px solid black;
   border-radius: 6px;
 }
-
 .weather {
-  font-size: 30px;
-  font-weight: 200;
-
+  font-size: 40px;
 }
