--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("/src/assets/clouds-1282314_960_720.webp");
+  background-image: url("/src/assets/clouds-gc18d5852c_1920.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
